--- a/TopGastroGuru/app/src/main/AndroidManifest.xml
+++ b/TopGastroGuru/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.TopGastroGuru"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.TopGastroGuru">
