--- a/TopGastroGuru/app/src/main/AndroidManifest.xml
+++ b/TopGastroGuru/app/src/main/AndroidManifest.xml
@@ -10,16 +10,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TopGastroGuru"
-        tools:targetApi="31">
+        android:theme="@style/Theme.SplashScreen"
+        tools:targetApi="33">
         <activity
             android:name=".view.activities.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.TopGastroGuru">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
