--- a/TopGastroGuru/app/src/main/AndroidManifest.xml
+++ b/TopGastroGuru/app/src/main/AndroidManifest.xml
@@ -13,13 +13,20 @@
         android:theme="@style/Theme.SplashScreen"
         tools:targetApi="33">
         <activity
-            android:name=".view.activities.MainActivity"
+            android:name=".view.activities.ActivityLoginPage"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".view.activities.MainActivity"
+            android:exported="true" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
         </activity>
     </application>
 
