--- a/TopGastroGuru/app/build.gradle
+++ b/TopGastroGuru/app/build.gradle
@@ -21,7 +21,7 @@ android {
         minSdkVersion 26
         targetSdkVersion 34
         versionCode 1
-        versionName "1.0"
+        versionName "1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -106,5 +106,8 @@ dependencies {
     implementation "com.squareup.moshi:moshi-adapters:$moshiVersion"
     // Do not update codegen version it will produce compile error when used with moshi retrofit converter!
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
+
+    //tab layout
+//    implementation 'com.google.android.material:material:1.9.0.'
 
 }
