--- a/TopGastroGuru/app/build.gradle
+++ b/TopGastroGuru/app/build.gradle
@@ -110,4 +110,8 @@ dependencies {
     //tab layout
 //    implementation 'com.google.android.material:material:1.9.0.'
 
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+
 }
