--- a/TopGastroGuru/app/build.gradle
+++ b/TopGastroGuru/app/build.gradle
@@ -114,4 +114,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
+    // Chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
 }
