--- a/TopGastroGuru/app/build.gradle
+++ b/TopGastroGuru/app/build.gradle
@@ -126,4 +126,7 @@ dependencies {
     implementation 'com.sun.mail:android-mail:1.6.6'
     implementation 'com.sun.mail:android-activation:1.6.6'
 
+    // Chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
 }
